[tool.poetry]
name = "rpkiclientweb"
version = "0.14.0"
license = "MIT"
keywords = ["rpki", "rpki-client", "validator", "metrics", "prometheus"]
description = "A web api for RPKI-client"
authors = ["Ties de Kock <ties@tiesdekock.nl>"]
readme = "README.md"
repository = "https://github.com/ties/rpki-client-web"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License"
]

packages = [{include = "rpkiclientweb"}]
include = [
  { path = "util/rsync_timeout" }
]

[tool.poetry.dependencies]
python = "^3.10"
# required for python 3.12
aiohttp = "^3.9.2"
# Do not use extras syntax, since this pulls in old aiohttp, which depends on
# frozenlist which is not 3.12 compatible.
prometheus-async = "22.2.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.13.0"
isort = {extras = ["pyproject"], version = "^5.12.0"}
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.1"
ruff = "^0.3.0"
black = "^23.3.0"
twine = "^5.0.0"
check-manifest = "^0.49"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"

[tool.ruff]
ignore = ["E501"]

[tool.pytest]
junit_family = "xunit2"

[settings]
# known_third_party = []
