[project]
name = "rpkiclientweb"
version = "0.15.0"
license = {text = "MIT"}
keywords = ["rpki", "rpki-client", "validator", "metrics", "prometheus"]
description = "A web api for RPKI-client"
authors = [{name = "Ties de Kock", email = "ties@tiesdekock.nl"}]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.13.3",
    "prometheus-async>=25.1.0",
    "PyYAML>=6.0",
]

[project.urls]
repository = "https://github.com/ties/rpki-client-web"

[dependency-groups]
dev = [
    "twine>=6.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.2.1",
    "ruff>=0.9.7",
    "check-manifest>=0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpkiclientweb"]
include = ["util/rsync_timeout"]

[tool.ruff]
target-version = "py310"
exclude = [
    ".mypy_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
# Use single quotes for strings
quote-style = "double"
# Respect existing line endings
line-ending = "auto"

[tool.pytest]
junit_family = "xunit2"

[settings]

# known_third_party = []
